--- a/Statdes.ipynb
+++ b/Statdes.ipynb
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 296,
    "id": "7ea22d6e-6098-4f8b-8663-7b8ca510e282",
    "metadata": {},
    "outputs": [
@@ -347,7 +347,7 @@
        "15   MARSEILLE 9EME        606752.63                84.05           296.57"
       ]
      },
-     "execution_count": 186,
+     "execution_count": 296,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 297,
    "id": "477d6925-69dc-4d0f-9a2e-b763465ffec6",
    "metadata": {},
    "outputs": [
@@ -388,181 +388,146 @@
        "      <th>Valeur fonciere</th>\n",
        "      <th>Surface reelle bati</th>\n",
        "      <th>Surface terrain</th>\n",
-       "      <th>Prix au m2</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>MARSEILLE 1ER</td>\n",
-       "      <td>763347.41</td>\n",
-       "      <td>50.26</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>15188.39</td>\n",
+       "      <td>763347.413793</td>\n",
+       "      <td>50.258621</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>MARSEILLE 2EME</td>\n",
-       "      <td>397568.70</td>\n",
-       "      <td>57.43</td>\n",
-       "      <td>18.70</td>\n",
-       "      <td>6922.09</td>\n",
+       "      <td>397568.695652</td>\n",
+       "      <td>57.434783</td>\n",
+       "      <td>18.695652</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>MARSEILLE 3EME</td>\n",
-       "      <td>443669.64</td>\n",
-       "      <td>37.12</td>\n",
-       "      <td>23.32</td>\n",
-       "      <td>11951.59</td>\n",
+       "      <td>443669.638889</td>\n",
+       "      <td>37.122222</td>\n",
+       "      <td>23.316667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>MARSEILLE 4EME</td>\n",
-       "      <td>388764.48</td>\n",
-       "      <td>55.02</td>\n",
-       "      <td>91.14</td>\n",
-       "      <td>7066.27</td>\n",
+       "      <td>388764.483051</td>\n",
+       "      <td>55.016949</td>\n",
+       "      <td>91.135593</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>MARSEILLE 5EME</td>\n",
-       "      <td>557377.78</td>\n",
-       "      <td>52.22</td>\n",
-       "      <td>31.73</td>\n",
-       "      <td>10672.97</td>\n",
+       "      <td>557377.776699</td>\n",
+       "      <td>52.223301</td>\n",
+       "      <td>31.728155</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>MARSEILLE 6EME</td>\n",
-       "      <td>894512.61</td>\n",
-       "      <td>51.47</td>\n",
-       "      <td>13.71</td>\n",
-       "      <td>17379.25</td>\n",
+       "      <td>894512.611940</td>\n",
+       "      <td>51.470149</td>\n",
+       "      <td>13.708955</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>MARSEILLE 7EME</td>\n",
-       "      <td>760260.61</td>\n",
-       "      <td>84.32</td>\n",
-       "      <td>205.34</td>\n",
-       "      <td>9016.45</td>\n",
+       "      <td>760260.605042</td>\n",
+       "      <td>84.319328</td>\n",
+       "      <td>205.344538</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>MARSEILLE 8EME</td>\n",
-       "      <td>767673.39</td>\n",
-       "      <td>89.19</td>\n",
-       "      <td>224.33</td>\n",
-       "      <td>8606.80</td>\n",
+       "      <td>767673.385659</td>\n",
+       "      <td>89.193798</td>\n",
+       "      <td>224.333333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
        "      <td>MARSEILLE 9EME</td>\n",
-       "      <td>606752.63</td>\n",
-       "      <td>84.05</td>\n",
-       "      <td>296.57</td>\n",
-       "      <td>7218.87</td>\n",
+       "      <td>606752.630573</td>\n",
+       "      <td>84.050955</td>\n",
+       "      <td>296.573248</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>MARSEILLE 10EME</td>\n",
-       "      <td>379440.37</td>\n",
-       "      <td>53.16</td>\n",
-       "      <td>144.89</td>\n",
-       "      <td>7137.20</td>\n",
+       "      <td>379440.370690</td>\n",
+       "      <td>53.163793</td>\n",
+       "      <td>144.887931</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>MARSEILLE 11EME</td>\n",
-       "      <td>450296.80</td>\n",
-       "      <td>92.59</td>\n",
-       "      <td>516.33</td>\n",
-       "      <td>4863.15</td>\n",
+       "      <td>450296.802120</td>\n",
+       "      <td>92.593640</td>\n",
+       "      <td>516.332155</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>MARSEILLE 12EME</td>\n",
-       "      <td>554832.93</td>\n",
-       "      <td>91.26</td>\n",
-       "      <td>603.85</td>\n",
-       "      <td>6079.86</td>\n",
+       "      <td>554832.928246</td>\n",
+       "      <td>91.257463</td>\n",
+       "      <td>603.847015</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>MARSEILLE 13EME</td>\n",
-       "      <td>393898.43</td>\n",
-       "      <td>90.90</td>\n",
-       "      <td>467.35</td>\n",
-       "      <td>4333.43</td>\n",
+       "      <td>393898.429268</td>\n",
+       "      <td>90.897561</td>\n",
+       "      <td>467.346341</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>MARSEILLE 14EME</td>\n",
-       "      <td>267443.44</td>\n",
-       "      <td>73.90</td>\n",
-       "      <td>327.04</td>\n",
-       "      <td>3619.20</td>\n",
+       "      <td>267443.437500</td>\n",
+       "      <td>73.895833</td>\n",
+       "      <td>327.041667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>MARSEILLE 15EME</td>\n",
-       "      <td>283375.44</td>\n",
-       "      <td>64.27</td>\n",
-       "      <td>243.00</td>\n",
-       "      <td>4409.24</td>\n",
+       "      <td>283375.443689</td>\n",
+       "      <td>64.268608</td>\n",
+       "      <td>243.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>MARSEILLE 16EME</td>\n",
-       "      <td>268873.62</td>\n",
-       "      <td>65.80</td>\n",
-       "      <td>204.32</td>\n",
-       "      <td>4086.32</td>\n",
+       "      <td>268873.619403</td>\n",
+       "      <td>65.798507</td>\n",
+       "      <td>204.320896</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            Commune  Valeur fonciere  Surface reelle bati  Surface terrain  \\\n",
-       "7     MARSEILLE 1ER        763347.41                50.26             0.00   \n",
-       "8    MARSEILLE 2EME        397568.70                57.43            18.70   \n",
-       "9    MARSEILLE 3EME        443669.64                37.12            23.32   \n",
-       "10   MARSEILLE 4EME        388764.48                55.02            91.14   \n",
-       "11   MARSEILLE 5EME        557377.78                52.22            31.73   \n",
-       "12   MARSEILLE 6EME        894512.61                51.47            13.71   \n",
-       "13   MARSEILLE 7EME        760260.61                84.32           205.34   \n",
-       "14   MARSEILLE 8EME        767673.39                89.19           224.33   \n",
-       "15   MARSEILLE 9EME        606752.63                84.05           296.57   \n",
-       "0   MARSEILLE 10EME        379440.37                53.16           144.89   \n",
-       "1   MARSEILLE 11EME        450296.80                92.59           516.33   \n",
-       "2   MARSEILLE 12EME        554832.93                91.26           603.85   \n",
-       "3   MARSEILLE 13EME        393898.43                90.90           467.35   \n",
-       "4   MARSEILLE 14EME        267443.44                73.90           327.04   \n",
-       "5   MARSEILLE 15EME        283375.44                64.27           243.00   \n",
-       "6   MARSEILLE 16EME        268873.62                65.80           204.32   \n",
-       "\n",
-       "    Prix au m2  \n",
-       "7     15188.39  \n",
-       "8      6922.09  \n",
-       "9     11951.59  \n",
-       "10     7066.27  \n",
-       "11    10672.97  \n",
-       "12    17379.25  \n",
-       "13     9016.45  \n",
-       "14     8606.80  \n",
-       "15     7218.87  \n",
-       "0      7137.20  \n",
-       "1      4863.15  \n",
-       "2      6079.86  \n",
-       "3      4333.43  \n",
-       "4      3619.20  \n",
-       "5      4409.24  \n",
-       "6      4086.32  "
+       "            Commune  Valeur fonciere  Surface reelle bati  Surface terrain\n",
+       "7     MARSEILLE 1ER    763347.413793            50.258621         0.000000\n",
+       "8    MARSEILLE 2EME    397568.695652            57.434783        18.695652\n",
+       "9    MARSEILLE 3EME    443669.638889            37.122222        23.316667\n",
+       "10   MARSEILLE 4EME    388764.483051            55.016949        91.135593\n",
+       "11   MARSEILLE 5EME    557377.776699            52.223301        31.728155\n",
+       "12   MARSEILLE 6EME    894512.611940            51.470149        13.708955\n",
+       "13   MARSEILLE 7EME    760260.605042            84.319328       205.344538\n",
+       "14   MARSEILLE 8EME    767673.385659            89.193798       224.333333\n",
+       "15   MARSEILLE 9EME    606752.630573            84.050955       296.573248\n",
+       "0   MARSEILLE 10EME    379440.370690            53.163793       144.887931\n",
+       "1   MARSEILLE 11EME    450296.802120            92.593640       516.332155\n",
+       "2   MARSEILLE 12EME    554832.928246            91.257463       603.847015\n",
+       "3   MARSEILLE 13EME    393898.429268            90.897561       467.346341\n",
+       "4   MARSEILLE 14EME    267443.437500            73.895833       327.041667\n",
+       "5   MARSEILLE 15EME    283375.443689            64.268608       243.000000\n",
+       "6   MARSEILLE 16EME    268873.619403            65.798507       204.320896"
       ]
      },
-     "execution_count": 207,
+     "execution_count": 297,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 298,
    "id": "dca3724a-0ea6-4b7e-8a56-95a250ff083c",
    "metadata": {},
    "outputs": [],
@@ -587,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 299,
    "id": "f5ddb59a-e500-49a5-acaa-682b2aa0033a",
    "metadata": {},
    "outputs": [],
@@ -598,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 301,
    "id": "c7fb0473-1472-46a3-acb8-a303caa9e768",
    "metadata": {},
    "outputs": [
@@ -624,7 +589,7 @@
    ],
    "source": [
     "plt.figure(figsize=(16,8))\n",
-    "sns.catplot(data=DVFmoy.sort_values(\"Prix au m2\", ascending=False), x='Prix au m2', y='Commune', kind='bar', aspect=2)\n",
+    "sns.catplot(data=DVFmoy.sort_values(\"Prix au m2\", ascending=False), x='Prix au m2', y='Commune', kind='bar', aspect=2, legend='Prix au m2 comprenant les terrains')\n",
     "plt.show()"
    ]
   },
@@ -1113,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 283,
    "id": "8faa31d2-71d7-4c6d-9c91-ad48242a7c63",
    "metadata": {},
    "outputs": [
@@ -1169,7 +1134,7 @@
     }
    ],
    "source": [
-    "corr_dfmix=dfmix.corr()\n",
+    "corr_dfmix=.corr()\n",
     "corr_dfmix"
    ]
   },
