--- a/prediction_regression.ipynb
+++ b/prediction_regression.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOetEFtOYAvBjkbt2Xzq5Xd",
+      "authorship_tag": "ABX9TyOjd34YZre7Y00SLh7+7FRt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2508,12 +2508,12 @@
         "df4"
       ],
       "metadata": {
-        "id": "ls_3fqWoIfZ4",
-        "outputId": "ff68d1d0-f5eb-4793-ff72-d1d21656b81a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 659
-        }
+        },
+        "id": "ls_3fqWoIfZ4",
+        "outputId": "ff68d1d0-f5eb-4793-ff72-d1d21656b81a"
       },
       "execution_count": 57,
       "outputs": [
@@ -3033,12 +3033,52 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# First, import the necessary libraries\n",
+        "import pandas as pd\n",
+        "from sklearn.ensemble import RandomForestRegressor\n",
+        "\n",
+        "\n",
+        "# Split the data \n",
+        "X_train, X_test, y_train, y_test = train_test_split(X_scaled, target, test_size=0.2, random_state=42)\n",
+        "\n",
+        "# Create a random forest regressor model\n",
+        "model = RandomForestRegressor()\n",
+        "\n",
+        "# Fit the model to the training data\n",
+        "model.fit(X_train, y_train)\n",
+        "\n",
+        "# Use the model to make predictions on the test data\n",
+        "predictions = model.predict(X_test)\n",
+        "\n",
+        "# Evaluate the model's performance\n",
+        "mae = mean_absolute_error(y_test, y_pred)\n",
+        "mse = mean_squared_error(y_test, y_pred)\n",
+        "r2 = r2_score(y_test, y_pred)\n",
+        "\n",
+        "print(f\"Mean Absolute Error: {mae:.2f}\")\n",
+        "print(f\"Mean Squared Error: {mse:.2f}\")\n",
+        "print(f\"R2 Score: {r2:.2f}\")"
+      ],
       "metadata": {
-        "id": "Q7N-q6K5rjxd"
+        "id": "Q7N-q6K5rjxd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9fa7f71f-121e-4ed6-bcf2-65260ed9f13e"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 76,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mean Absolute Error: 238930.88\n",
+            "Mean Squared Error: 124238155497.65\n",
+            "R2 Score: -0.10\n"
+          ]
+        }
+      ]
     }
   ]
 }
