--- a/prediction_regression.ipynb
+++ b/prediction_regression.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNxdkk5PAvzVWjZvAzCu5vw",
+      "authorship_tag": "ABX9TyMNhHQ9cnemZdBrQfxUELFo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4002,6 +4002,356 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df3"
+      ],
+      "metadata": {
+        "id": "GeJiYQBgqBLh",
+        "outputId": "3f0deab3-c724-4156-b6b0-5397d73aa24f",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 659
+        }
+      },
+      "execution_count": 135,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "       Nature mutation  Valeur fonciere Code voie Code postal  \\\n",
+              "400763           Vente         230000.0      6930       13015   \n",
+              "400768           Vente         610000.0      4083       13016   \n",
+              "400820           Vente         260000.0      4755       13016   \n",
+              "400821           Vente         260000.0      4755       13016   \n",
+              "400822           Vente         260000.0      4755       13016   \n",
+              "...                ...              ...       ...         ...   \n",
+              "441152           Vente         520000.0      2856       13011   \n",
+              "441153           Vente         520000.0      2856       13011   \n",
+              "441154           Vente         520000.0      2856       13011   \n",
+              "441155           Vente         520000.0      2856       13011   \n",
+              "441161           Vente         109000.0      2566       13013   \n",
+              "\n",
+              "                Commune  Code commune Code departement Code type local  \\\n",
+              "400763  MARSEILLE 15EME           215               13               4   \n",
+              "400768  MARSEILLE 16EME           216               13               1   \n",
+              "400820  MARSEILLE 16EME           216               13               3   \n",
+              "400821  MARSEILLE 16EME           216               13               2   \n",
+              "400822  MARSEILLE 16EME           216               13               2   \n",
+              "...                 ...           ...              ...             ...   \n",
+              "441152  MARSEILLE 11EME           211               13               2   \n",
+              "441153  MARSEILLE 11EME           211               13               2   \n",
+              "441154  MARSEILLE 11EME           211               13               2   \n",
+              "441155  MARSEILLE 11EME           211               13               2   \n",
+              "441161  MARSEILLE 13EME           213               13               1   \n",
+              "\n",
+              "        Surface reelle bati  Surface terrain  \n",
+              "400763                270.0            151.0  \n",
+              "400768                118.0            605.0  \n",
+              "400820                  0.0            278.0  \n",
+              "400821                 45.0            278.0  \n",
+              "400822                 52.0            278.0  \n",
+              "...                     ...              ...  \n",
+              "441152                 45.0            828.0  \n",
+              "441153                 37.0            828.0  \n",
+              "441154                100.0            828.0  \n",
+              "441155                 80.0            828.0  \n",
+              "441161                 45.0             51.0  \n",
+              "\n",
+              "[4580 rows x 10 columns]"
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-01f173ef-1ec8-4dbe-bdbc-d3ea2e4152e0\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Nature mutation</th>\n",
+              "      <th>Valeur fonciere</th>\n",
+              "      <th>Code voie</th>\n",
+              "      <th>Code postal</th>\n",
+              "      <th>Commune</th>\n",
+              "      <th>Code commune</th>\n",
+              "      <th>Code departement</th>\n",
+              "      <th>Code type local</th>\n",
+              "      <th>Surface reelle bati</th>\n",
+              "      <th>Surface terrain</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>400763</th>\n",
+              "      <td>Vente</td>\n",
+              "      <td>230000.0</td>\n",
+              "      <td>6930</td>\n",
+              "      <td>13015</td>\n",
+              "      <td>MARSEILLE 15EME</td>\n",
+              "      <td>215</td>\n",
+              "      <td>13</td>\n",
+              "      <td>4</td>\n",
+              "      <td>270.0</td>\n",
+              "      <td>151.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>400768</th>\n",
+              "      <td>Vente</td>\n",
+              "      <td>610000.0</td>\n",
+              "      <td>4083</td>\n",
+              "      <td>13016</td>\n",
+              "      <td>MARSEILLE 16EME</td>\n",
+              "      <td>216</td>\n",
+              "      <td>13</td>\n",
+              "      <td>1</td>\n",
+              "      <td>118.0</td>\n",
+              "      <td>605.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>400820</th>\n",
+              "      <td>Vente</td>\n",
+              "      <td>260000.0</td>\n",
+              "      <td>4755</td>\n",
+              "      <td>13016</td>\n",
+              "      <td>MARSEILLE 16EME</td>\n",
+              "      <td>216</td>\n",
+              "      <td>13</td>\n",
+              "      <td>3</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>278.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>400821</th>\n",
+              "      <td>Vente</td>\n",
+              "      <td>260000.0</td>\n",
+              "      <td>4755</td>\n",
+              "      <td>13016</td>\n",
+              "      <td>MARSEILLE 16EME</td>\n",
+              "      <td>216</td>\n",
+              "      <td>13</td>\n",
+              "      <td>2</td>\n",
+              "      <td>45.0</td>\n",
+              "      <td>278.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>400822</th>\n",
+              "      <td>Vente</td>\n",
+              "      <td>260000.0</td>\n",
+              "      <td>4755</td>\n",
+              "      <td>13016</td>\n",
+              "      <td>MARSEILLE 16EME</td>\n",
+              "      <td>216</td>\n",
+              "      <td>13</td>\n",
+              "      <td>2</td>\n",
+              "      <td>52.0</td>\n",
+              "      <td>278.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>441152</th>\n",
+              "      <td>Vente</td>\n",
+              "      <td>520000.0</td>\n",
+              "      <td>2856</td>\n",
+              "      <td>13011</td>\n",
+              "      <td>MARSEILLE 11EME</td>\n",
+              "      <td>211</td>\n",
+              "      <td>13</td>\n",
+              "      <td>2</td>\n",
+              "      <td>45.0</td>\n",
+              "      <td>828.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>441153</th>\n",
+              "      <td>Vente</td>\n",
+              "      <td>520000.0</td>\n",
+              "      <td>2856</td>\n",
+              "      <td>13011</td>\n",
+              "      <td>MARSEILLE 11EME</td>\n",
+              "      <td>211</td>\n",
+              "      <td>13</td>\n",
+              "      <td>2</td>\n",
+              "      <td>37.0</td>\n",
+              "      <td>828.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>441154</th>\n",
+              "      <td>Vente</td>\n",
+              "      <td>520000.0</td>\n",
+              "      <td>2856</td>\n",
+              "      <td>13011</td>\n",
+              "      <td>MARSEILLE 11EME</td>\n",
+              "      <td>211</td>\n",
+              "      <td>13</td>\n",
+              "      <td>2</td>\n",
+              "      <td>100.0</td>\n",
+              "      <td>828.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>441155</th>\n",
+              "      <td>Vente</td>\n",
+              "      <td>520000.0</td>\n",
+              "      <td>2856</td>\n",
+              "      <td>13011</td>\n",
+              "      <td>MARSEILLE 11EME</td>\n",
+              "      <td>211</td>\n",
+              "      <td>13</td>\n",
+              "      <td>2</td>\n",
+              "      <td>80.0</td>\n",
+              "      <td>828.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>441161</th>\n",
+              "      <td>Vente</td>\n",
+              "      <td>109000.0</td>\n",
+              "      <td>2566</td>\n",
+              "      <td>13013</td>\n",
+              "      <td>MARSEILLE 13EME</td>\n",
+              "      <td>213</td>\n",
+              "      <td>13</td>\n",
+              "      <td>1</td>\n",
+              "      <td>45.0</td>\n",
+              "      <td>51.0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>4580 rows × 10 columns</p>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-01f173ef-1ec8-4dbe-bdbc-d3ea2e4152e0')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-01f173ef-1ec8-4dbe-bdbc-d3ea2e4152e0 button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-01f173ef-1ec8-4dbe-bdbc-d3ea2e4152e0');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 135
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df5=df3['Valeur fonciere','Code postal','surface reelle bati']\n",
+        "\n",
+        "# Chargement des données et sélection des colonnes 'col1', 'col2' et 'col3'\n",
+        "CP1 = df5['Code postal']\n",
+        "\n",
+        "\n",
+        "# Conversion de chaque colonne en variables dummies\n",
+        "CP1_dummies = pd.get_dummies(CP1, prefix='CP1')\n",
+        "\n",
+        "\n",
+        "# Concaténation des variables dummies avec le reste des données\n",
+        "df5 = pd.concat([df5, CP1], axis=1)\n",
+        "\n",
+        "# Suppression des colonnes originales\n",
+        "df5 = df5.drop(columns=['Code postal'])\n"
+      ],
+      "metadata": {
+        "id": "EwmBkAh8qGkj"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
