--- a/prediction_regression.ipynb
+++ b/prediction_regression.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMNhHQ9cnemZdBrQfxUELFo",
+      "authorship_tag": "ABX9TyPj1/lSDmXOS6YC9XOXynLn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4009,12 +4009,12 @@
         "df3"
       ],
       "metadata": {
-        "id": "GeJiYQBgqBLh",
-        "outputId": "3f0deab3-c724-4156-b6b0-5397d73aa24f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 659
-        }
+        },
+        "id": "GeJiYQBgqBLh",
+        "outputId": "3f0deab3-c724-4156-b6b0-5397d73aa24f"
       },
       "execution_count": 135,
       "outputs": [
@@ -4331,7 +4331,7 @@
     {
       "cell_type": "code",
       "source": [
-        "df5=df3['Valeur fonciere','Code postal','surface reelle bati']\n",
+        "df5=df3[[\"Valeur fonciere\",\"Code postal\",\"Surface reelle bati\"]]\n",
         "\n",
         "# Chargement des données et sélection des colonnes 'col1', 'col2' et 'col3'\n",
         "CP1 = df5['Code postal']\n",
@@ -4350,8 +4350,140 @@
       "metadata": {
         "id": "EwmBkAh8qGkj"
       },
-      "execution_count": null,
+      "execution_count": 138,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Sélectionner les colonnes à utiliser comme features\n",
+        "features= df5.drop(columns=['Valeur fonciere'])\n",
+        "\n",
+        "# Sélectionner la colonne cible\n",
+        "target= Y = df5[\"Valeur fonciere\"]\n",
+        "\n",
+        "# Normaliser les features en utilisant StandardScaler\n",
+        "scaler = StandardScaler()\n",
+        "scaled_features = scaler.fit_transform(features)\n",
+        "X = scaled_features"
+      ],
+      "metadata": {
+        "id": "W_kL1aM5rWiU"
+      },
+      "execution_count": 139,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Éliminer les colonnes corrélées en utilisant une matrice de corrélation\n",
+        "X = pd.DataFrame(X, columns=features.columns)\n",
+        "corr_matrix = X.corr().abs()\n",
+        "upper = corr_matrix.where(np.triu(np.ones(corr_matrix.shape), k=1).astype(np.bool))\n",
+        "to_drop = [column for column in upper.columns if any(upper[column] > 0.95)]\n",
+        "X_scaled = X.drop(X[to_drop], axis=1)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e932a3a1-0602-4337-f879-4a6326a2ab89",
+        "id": "VLeiJ30Cr6KU"
+      },
+      "execution_count": 141,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-141-272c6db5c57f>:4: DeprecationWarning: `np.bool` is a deprecated alias for the builtin `bool`. To silence this warning, use `bool` by itself. Doing this will not modify any behavior and is safe. If you specifically wanted the numpy scalar type, use `np.bool_` here.\n",
+            "Deprecated in NumPy 1.20; for more details and guidance: https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations\n",
+            "  upper = corr_matrix.where(np.triu(np.ones(corr_matrix.shape), k=1).astype(np.bool))\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# régression Lasso\n",
+        "# avec un coefficient alpha égal à 0.1\n",
+        "lasso = Lasso(alpha=0.1)\n",
+        "\n",
+        "# Diviser les données en ensembles d'entraînement et de test\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X_scaled, target, test_size=0.2)\n",
+        "\n",
+        "# Entraîner le modèle sur l'ensemble d'entraînement\n",
+        "lasso.fit(X_train, y_train)\n",
+        "\n",
+        "# Faire des prédictions sur l'ensemble de test\n",
+        "y_pred = lasso.predict(X_test)\n",
+        "\n",
+        "# Calculer et afficher l'erreur quadratique moyenne\n",
+        "mse = mean_squared_error(y_test, y_pred)\n",
+        "print(f\"Mean Squared Error: {mse:.2f}\")"
+      ],
+      "metadata": {
+        "id": "YKNDTCeTsC-V",
+        "outputId": "75c0f510-22c7-44a2-bc5a-2c79f9cd9c9c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 142,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mean Squared Error: 12638668983120.65\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Split the data \n",
+        "X_train, X_test, y_train, y_test = train_test_split(X_scaled, target, test_size=0.2, random_state=42)\n",
+        "\n",
+        "# Create the SVM model\n",
+        "model = SVR(kernel='rbf', C=1.0, epsilon=0.1)\n",
+        "\n",
+        "# Fit the model to the training data\n",
+        "model.fit(X_train, y_train)\n",
+        "\n",
+        "# Make predictions on the test set  \n",
+        "y_pred = model.predict(X_test)\n",
+        " \n",
+        "# Evaluate the model's performance\n",
+        "mae = mean_absolute_error(y_test, y_pred)\n",
+        "mse = mean_squared_error(y_test, y_pred)\n",
+        "r2 = r2_score(y_test, y_pred)\n",
+        "\n",
+        "print(f\"Mean Absolute Error: {mae:.2f}\")\n",
+        "print(f\"Mean Squared Error: {mse:.2f}\")\n",
+        "print(f\"R2 Score: {r2:.2f}\")"
+      ],
+      "metadata": {
+        "id": "qYt22VRtsUu9",
+        "outputId": "f3468f56-4c70-4e0d-b100-57354e15c9a6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 143,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mean Absolute Error: 1260440.08\n",
+            "Mean Squared Error: 15921857069541.69\n",
+            "R2 Score: -0.08\n"
+          ]
+        }
+      ]
     }
   ]
 }
